UI updates: gap fixes

--- a/apps/ideaspace/src/components/modules/WorkshoppingPage/CommentsForm/comments.css
+++ b/apps/ideaspace/src/components/modules/WorkshoppingPage/CommentsForm/comments.css
@@ -46,6 +46,12 @@
   flex-direction: row-reverse;
 }
 
+textarea::placeholder {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 300;
+}
+
 .user_name_comment_box {
   padding-left: 20px;
 }
